# BART

./: .Rinstignore  DESCRIPTION  MD5  NAMESPACE  NEWS  cleanup  cleanup.win  configure  configure.ac
R/: abart.R  bartModelMatrix.R  class.ind.R  crisk.bart.R  crisk.pre.bart.R  crisk2.bart.R  draw_lambda.R  draw_lambda_i.R  draw_z.R  gbart.R  gbmm.R  gewekediag.R  lbart.R  mbart.R  mbart2.R  mc.abart.R  mc.cores.openmp.R  mc.crisk.bart.R  mc.crisk.pwbart.R  mc.crisk2.bart.R  mc.crisk2.pwbart.R  mc.gbart.R  mc.gbmm.R  mc.lbart.R  mc.mbart.R  mc.mbart2.R  mc.pbart.R  mc.pwbart.R  mc.recur.bart.R  mc.recur.pwbart.R  mc.surv.bart.R  mc.surv.pwbart.R  mc.wbart.R  mc.wbart.gse.R  pbart.R  predict.crisk2bart.R  predict.criskbart.R  predict.crskmbart.R  predict.lbart.R  predict.mbart.R  (+22 more)
data/: ACTG175.rda  Alligator.RData  alligator.rda  arq.rda  bladder.rda  datalist  leukemia.rda  lung.rda  transplant.rda  xdm20.test.rda  xdm20.train.rda  ydm20.test.rda  ydm20.train.rda
demo/: 00Index  aids.itr.lbart.R  aids.itr.pbart.R  alligator.R  bladder.recur.bart.R  boston.R  c.surv.bart.R  cal.recur.bart.R  concord.surv.bart.R  cube.abart.R  cube.gbart.R  cube.gbmm.R  cube.lbart.R  cube.mbart.R  cube.pbart.R  data.recur.pre.bart.R  dm.recur.bart.R  ex.mbart.R  exp.recur.bart.R  friedman.wbart.R  gator.mbart2.R  geweke.lung.surv.bart.R  geweke.pbart1.R  geweke.pbart2.R  geweke.pbart3.R  geweke.recur.bart.R  geweke.rs.pbart.R  geweke.surv.bart.R  inform.alt.gbart.R  inform.null.gbart.R  leuk.R  liver.crisk.bart.R  liver.crisk2.bart.R  liver50.crisk.bart.R  lung.surv.bart.R  lung.surv.ice.R  lung.surv.lbart.R  missing.gbart.R  nhanes.pbart1.R  nhanes.pbart2.R  (+12 more)
inst/: CITATION
man/: ACTG175.Rd  Alligator.Rd  BART-package.Rd  abart.Rd  alligator.Rd  arq.Rd  bartModelMatrix.Rd  bladder.Rd  class.ind.Rd  crisk.bart.Rd  crisk.pre.bart.Rd  crisk2.bart.Rd  draw_lambda_i.Rd  gbart.Rd  gbmm.Rd  gewekediag.Rd  lbart.Rd  leukemia.Rd  lung.Rd  mbart.Rd  mbart2.Rd  mc.cores.openmp.Rd  mc.crisk.pwbart.Rd  mc.crisk2.pwbart.Rd  mc.lbart.Rd  mc.mbart.Rd  mc.pbart.Rd  mc.surv.pwbart.Rd  mc.wbart.Rd  mc.wbart.gse.Rd  pbart.Rd  predict.crisk2bart.Rd  predict.criskbart.Rd  predict.lbart.Rd  predict.mbart.Rd  predict.pbart.Rd  predict.recurbart.Rd  predict.survbart.Rd  predict.wbart.Rd  pwbart.Rd  (+15 more)
src/: BROWSE  (+28 more)
(+69 files in other folders)
